tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ANewWaytoFarmRes-AAAAAAAAAAAAAAAAAAABLg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 302,
  "prerequisites": [
    1002
  ],
  "properties": {
    "auto_claim": false,
    "desc": "While regular plants are mostly used to make food, these magical plants (courtesy of Thaumic Bases) will grow you some good ol' resources!\n\nSpecifically, you have the ability to create Redlon (for Redstone), Metalleat (for Iron). Lucrite (for Gold), and Lazullia (for Lapis Lazuli).\n\nThere's also the fabled \"Rainbow Cacti\", which should help those who like to build with various colors...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A New Way to \"Farm\" Resources",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1002
  ],
  "rewards": [],
  "tasks": []
}
