tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__AddingMoreFuncti-ad_fPxg-ThqyyuppTrG1gQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1746919580362716545,
  "prerequisites": [
    12897826448873968265
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One such improvement is the Advanced Redcrystal.\n\nIt allows you to set a threshold with your wand to define how strong a signal needs to be in order to pass through. This can come in handy when checking fill level of tanks or power storage.\n\n[note]One caveat for redstone experts: The Advanced Redcrystal checks the signal strength in the block it is in, not in the previous block like a comparator would.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Adding More Functions",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12897826448873968265
  ],
  "rewards": [],
  "tasks": []
}
