tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ArditeandCobaltM-AAAAAAAAAAAAAAAAAAAHLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1837,
  "prerequisites": [
    1158
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ironwood is a much harder and durable material than you imagined at first. Making Tools and Armor gives them unique features. With a pickaxe, you can mine ores up to Cobalt level, meaning you can harvest Ardite and Cobalt without an EBF.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ardite and Cobalt Mining",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1158
  ],
  "rewards": [],
  "tasks": []
}
